homepage.css
/* ... */
#slide-2:hover::after{
    opacity: 0.5;
}

#slide-3::after{
    content: "Whistler";
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 30px;
    background: black;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity 0.5s ease;
}

#slide-3:hover::after{
    opacity: 0.5;
}

#slide-4::after{
    content: "Stanley Park";
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 30px;
    background: black;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity 0.5s ease;
}

#slide-4:hover::after{
    opacity: 0.5;
}

#slide-5::after{
    content: "CN Tower";
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 30px;
    background: black;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity 0.5s ease;
}

#slide-5:hover::after{
    opacity: 0.5;
}

.centered-slider{
    position: absolute;
    color: rgb(0, 0, 0);
    width: 50%;
    top: 80%;
    left: 50%;
    font-size: 5vh;
    font-weight: 550;
    transform: translate(-50%, -50%);
    opacity: 90%;
}

@media screen and (max-width: 924px){   
   
    .destination .info{
        max-width: 30%;
        font-size: 90%;
        
    }

    
    
}   

@media screen and (max-width: 800px){   
    .slider{
        flex-direction: column;
    }
    .destination .info{
        max-width: 90%;
        margin: auto;
        padding-bottom: 2em;
    }
    .destination h1{
        text-align: center;
    }

    .features h1{
        text-align: center;
        margin-right: 20%;
    }

    .slides div {
        width: 300px;
        height: 200px;
      }
  
}

/* CONTAINER*/

.container{
    /*background: rgb(28,150,152);
    background: linear-gradient(0deg, rgba(28,150,152,1) 0%, rgba(20,24,36,1) 96%);*/
    background-color: #141824;
    overflow: hidden;
    margin-top: -1%;
}

.features{
    min-height: 90vh;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.features h1{
    margin-left: 20vh;
    color: rgb(255, 255, 255);
    font-size: 2.2em;
    margin-top: 10vh;
}

.main_container{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 30px;
    margin-bottom: 20px;
}

.sub_container1{
    margin-top: 30px;
    width: 300px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.sub_container2{
    margin-top: 30px;
    width: 300px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.sub_container3{
    margin-top: 30px;
    width: 300px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.sub_container4{
    margin-top: 30px;
    width: 300px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.imagediv img{
    width: 120%;
  
}
.imagediv{
    width:100%;
    height: 50%;
    overflow: hidden;
}
.package_details{
    height: 9.5em;
}

.package_details a{
    text-decoration: none;
    color: black;
    
}

.first{
    display: flex;
    padding: 10px 0px 10px 10px;
    align-items: center;
}

.first p{
    margin-left: 10px;
    font-size: 3vh;
    font-weight: bold;
}

.second{
    display: flex;
    padding: 5px 10px 5px 10px;
    align-items: center;
}
.second p{
    margin-left: 10px;
    font-size: 2.1vh;
}

.package_button{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 4vh;
    
}

.button_style{
    border: 3px solid black;
    padding: 5px 10px;
    font-size: 2vh;
    cursor: pointer;
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
    background-color: transparent;
}


/* --------close container------*/

/* GUIDE*/
.guide{
    min-height: 90vh;
    margin: auto;

}

.guide h2{
    margin-left: 20vh;
    color: rgb(255, 255, 255);
    font-size: 2.2em;
    margin-top: 10vh;
}

.guide_main{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 30px;
    margin-bottom: 80px;
}

.guide_container1{
    margin-top: 30px;
    width: 400px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.guide_container2{
    margin-top: 30px;
    width: 400px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.guide_container3{
    margin-top: 30px;
    width: 400px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.guideimg img{
    width: 100%; 
}
.guideimg{
    width:100%;
    height: 50%;
    overflow: hidden;
}

.guide_button{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 4vh;
}

.guide_style{
    border: 3px solid black;
    padding: 5px 10px;
    font-size: 2vh;
    cursor: pointer;
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
    background-color: transparent;
}

.guidefirst{
    padding: 10px;
    align-items: center;
}

.guidefirst p{
    margin-left: 10px;
    font-size: 2.5vh;
}

.guidefirst h1{
    font-size: 4vh;
    font-weight: bold;
    text-align: center;
}


/*----*----GUIDE----*-----*/

/* Gallery*/
.gallery_container{
    min-height: 8vh;
    background:#141824 ;
    color: beige;
    padding: 5% 8% 5% 8%;
    margin-top: -1%;
}

.h2gallery{
    font-size: 2.2em;
    padding-bottom: 5vh;
}
.row { 
    display: flex;
    flex-wrap: wrap;
    padding: 0 5px;
  }
  
.column {
    flex: 25%;
    max-width: 25%;
    padding: 0 5px;
  }
  
.column img {
    margin-top: 8px;
    padding: 4px;
    vertical-align: middle;
    width: 100%;
    transition: all .5s;
  }

.column img:hover{
      transform: scale(1.2);
  }
  
@media screen and (max-width: 800px) {
    .column {
      -ms-flex: 50%;
      flex: 50%;
      max-width: 50%;
    }

  }
/* ... */

